Clean up backend code inspection warnings: Spring Security lambda DSL, deduplicate cascade-delete and DTO mapping, modernize streams to toList, remove unused mocks and imports